src/docusaurus/versioned_docs/version-3.0/createsession-sessionmanager.mdx
import PartialExample from './_mentored.mdx';
import Admonition from '@theme/Admonition';
import BulkUploadTable from './_sessionbulkuploadtable.mdx';
import FormFieldsNote from './_formfieldscustomizability.mdx';

# Creating Sessions for an Organization

You can create and schedule sessions between mentor and mentees.

Sessions can be created using any one of the following methods:

* Using the **Create session** button
* Using bulk upload

## Using the Create Session Button

**To create a session, do as follows:**

1. Do one of the following actions:

    * Select <b>Workspace</b> from the <b>Application</b> menu.
    * Go to the <b>Application</b> menu ![](media/burgermenu-icon.png) and select <b>Workspace</b>.

2. On the Workspace page, click <b>Manage session</b>.

3. Go to the **Create sessions** tab.

4. Click the <b>Create session</b> button. The Create a new session page appears.

    ![](media/assignsession.png)

5. Optionally, to add a session image, click <b>Add image</b> and do one of the following actions:

    * To take a picture, select <b>Take Photo</b>.
    * To upload an image, select <b>Choose from library</b>.
        <p>  
        <Admonition type="tip">
        <p>Select an image that is relevant to the session topic.</p>
        </Admonition>
        </p>

6. Enter the session information in the <b>Session title</b> box and <b>Description</b> box.

    <FormFieldsNote />

7. To select the type of session, do as follows:

    1. Click the <b>Session type</b> box.
    2. Select the session type from the <b>Session type</b> dropdown and click <b>Ok</b>.

    <p>  
        <Admonition type="note">
        <p>You cannot change the session type after publishing the session.</p>
        </Admonition>
    </p>

8. To assign the session to a mentor, do as follows:

    1. Click <b>+ Add mentor</b>. The Mentor list window appears.
    2. Find a mentor from the list and click <b>Add</b>.

        <p>  
        <Admonition type="tip">
        <p>To assign the session to a different mentor, do as follows:</p>
        <ol>
        <li>In the <b>+ Add mentor</b> box, click the mentor's name that was previously selected.</li>
        <li>Find a new mentor and click <b>Add</b>.</li>
        </ol>
        </Admonition>
        </p>

        ![](media/mentorlistwindow.png)

    <p>  
        <Admonition type="note"> 
        <p>After publishing the session, you cannot assign the session to a different mentor.</p>
        </Admonition>
    </p>
    <p>  
        <Admonition type="tip">
        <p>From the Mentor or Mentee list window, you can find users by:</p>
        <ul>
        <li>Searching for the user in the <b>Search</b> box.</li>
        <li>Using filters such as the user's organization or designation.</li>
        <li>Changing the number of users listed on the page using the <b>Items per page</b> dropdown.</li>
        </ul>
        </Admonition>
    </p>

9. To invite mentees, do as follows:

    1. Click <b>+ Add mentee</b>. The Mentee list window appears.
    2. Find a mentee from the list and click <b>Add</b>.

        ![](media/menteelistwindow.png)

    <p>  
        <Admonition type="tip">
        <ul>
        <li>It is optional to invite mentees to a Public session.</li>
        <li>To facilitate one-on-one mentoring, you can set up Private sessions consisting of an invited mentee.</li>
        </ul>
        </Admonition>
    </p>
    <p>  
        <Admonition type="note">
        <p>You cannot add mentees after the session enrollment limit is reached. If you add new mentees after this limit is reached, a <i>session seats full</i> message appears.</p>
        </Admonition>
    </p>

10. To schedule a session, do as follows:

    1. Click the <b>Start date</b> box and <b>End date</b> box.
    2. Select the date and time from the date and time picker.
    3. Click ![](media/selectdateandtime.png).

    <p>  
        <Admonition type="note">
        <p>The session duration should be at least 30 minutes.</p>
        </Admonition>
    </p>

11. Select an option from the following:

    * <b>Recommended for</b>
    * <b>Categories</b>
    * <b>Medium</b>

    <p>
        <Admonition type="tip">
        <ul>
        <li>To cancel the selection, click the option again.</li>
        <li>To add a new option, do as follows:</li>
            <ol>
            <li>Click <b>+ Add</b> and enter the new option.</li>
            <li>Click <b>Ok</b>.</li>
            </ol>
        <li>To select all the options, turn on the toggle.</li>
        </ul>
        </Admonition>
    </p>

    ![](media/portal-createsessionoptions.png)  

12. Click <b>Publish and add link</b>. The session is published on the platform and mentees can now view the session.

    <p>
        <Admonition type="note">
        <p>You must set the meeting platform on the <b>Meeting Link</b> tab.</p>
        </Admonition>
    </p>

    ![](media/portal-addmeetinglink.png)

    <p>
        <Admonition type="tip">
        <p>To go back and edit the session details, do as follows:</p>
        <ol>
        <li>Go to the <b>Edit session</b> tab.</li>
        <li>Make the necessary changes and click <b>Save</b>.</li>
        </ol>
        </Admonition>
    </p>

13. On the <b>Meeting link</b> tab, select a meeting platform from the <b>Add meeting link</b> menu.
    
    <p>
        <Admonition type="note">
        <p>If you have not selected a meeting platform, <b>BigBlueButton</b> is set as the default platform.</p>
        </Admonition>
    </p>

    <table>
    <tr>
        <th>Meeting Platform</th>
        <th>Meeting Information</th>
    </tr>
    <tr>
        <td>BigBlueButton</td>
        <td>No action required.</td>
    </tr>
    <tr>
        <td>Google Meet</td>
        <td>Copy and paste the call link in the <b>Meet link</b> box.</td>
    </tr>
    <tr>
        <td>WhatsApp</td>
        <td>Copy and paste the call link in the <b>WhatsApp</b> box.</td>
    </tr>
    <tr>
        <td>Zoom</td>
        <td><p>Do the following actions:</p><ol><li>Copy and paste the meeting link in the <b>Zoom link</b> box.</li><li>Copy and paste the meeting ID in the <b>Meeting ID</b> box.</li><li>Copy and paste the passcode in the <b>Passcode</b> box.</li></ol></td>
    </tr>
    </table>

14. Click <b>Submit</b>. The meeting information is added.

    <p>
        <Admonition type="tip">
        <p>You can find the sessions that are assigned to mentors and track their progress on the Session list section.</p>
        </Admonition>
    </p>

## Using Bulk Upload

For an organization's mentorship program, you can create and schedule multiple sessions between mentors and mentees. 

**To create sessions through bulk upload, do as follows:**

1. Do one of the following actions:

    * Select <b>Workspace</b> from the <b>Application</b> menu.
    * Go to the <b>Application</b> menu ![](media/burgermenu-icon.png) and select <b>Workspace</b>.

2. On the Workspace page, click **Manage session**.

3. Go to the **Bulk upload** tab.

4. Click **Download sample CSV** to download the sample CSV file. The downloaded sample file contains information that you must clear before adding the session details.

5. Open the downloaded CSV file and clear the sample details.

6. Enter *Create* in the **Action** column.

7. Leave the **ID** column as blank.

8. Enter the session information as per the following table:

    <BulkUploadTable />

9. On the **Bulk upload** tab, click **Upload CSV** and select the CSV file containing the list of sessions. To view the published sessions and their session IDs, go to the **Create sessions** tab.

    <p>
    <Admonition type="note">
    <p>After creating sessions, you will receive a CSV file in your email that displays details such as:</p>
    <ul>
    <li>ID</li>
    <li>Session status (<i>Published</i> or <i>Invalid</i>)</li>
    <li>Status message</li>
    </ul>
    <p>If the details entered in the uploaded CSV need corrections, the session status would be <i>invalid</i> and the session is not published. In such cases, refer to the status message and reupload the respective file with the updated details.</p><p>To make the necessary updates, see the <a href="bulkupload-invalidsession">Troubleshooting Invalid Messages</a> section.</p>
    </Admonition>
    </p>










